src/test/deca/context/invalid/method_type_inconnu.deca
// Description:
//    Test de la déclaration d'une méthode de type string dans une classe
//
// Résultats:
//    Ligne 11 : le type string n'existe pas! (Règle (0.2))
//
// Historique:
//    créé le 21/01/2017

class A {
  string helloWorld() {
    return "Hello World !";
  }
}
